--- a/app/views/layouts/_bodyapp.html.erb
+++ b/app/views/layouts/_bodyapp.html.erb
@@ -1,91 +1,34 @@
 
 <script type="text/javascript">
-
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-30392244-1']);
     _gaq.push(['_setDomainName', 'notelimites.com']);
     _gaq.push(['_setAllowLinker', true]);
     _gaq.push(['_trackPageview']);
-
     (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-
 </script>
-
-
-
-
 <% if signed_in? 	  %>
-
     <div id="wrapper">
-      <%= render 'layouts/sidebar' %>
+      <div class="hidden-xs">
+        <%= render 'layouts/sidebar' %>
+      </div>
+      <div class="visible-xs" style="margin-top: 50px">
+        <%= render 'layouts/sidebar' %>
+      </div>
       <!-- Page content -->
       <div id="page-content-wrapper">
-
         <div class="hidden-xs">
           <%= render 'layouts/topbar' %>
         </div>
         <div class="visible-xs">
-          <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
+          <%= render 'layouts/topbarxs' %>
         </div>
         <!-- Keep all page content within the page-content inset div! -->
         <div class="page-content inset">
-
-
-          <div class="col-md-12 col-sm-12 col-lg-12">
-            <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
-              <% [:notice, :error, :alert].each do |level| %>
-                  <% unless flash[level].blank? %>
-                      <div data-alert="alert" class="alert-message <%= flash_class(level) %> fade in">
-                        <a class="close" href="#">×</a>
-                        <%= content_tag :p, flash[level] %>
-                      </div>
-                  <% end %>
-              <% end %>
-            </div>
-
-            <%= yield %>
-
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-
-
-
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("active");
-        });
-    </script>
-
-
-
-
-
-<%  else %>
-    <div id="wrapper">
-      <!-- Page content -->
-      <div id="page-content-wrapper">
-       <%= render 'layouts/sidebarlogout' %>
-
-
-        <div class="hidden-xs">
-          <%= render 'layouts/topbarlogout' %>
-        </div>
-        <div class="visible-xs">
-          <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        </div>
-        <!-- Keep all page content within the page-content inset div! -->
-        <div class="page-content inset">
-
-
           <div class="col-md-10 col-sm-12 col-lg-10">
             <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
               <% [:notice, :error, :alert].each do |level| %>
@@ -97,18 +40,46 @@
                   <% end %>
               <% end %>
             </div>
-
             <%= yield %>
-
           </div>
         </div>
       </div>
-
-
     </div>
-
-
-
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("active");
+        });
+    </script>
+<%  else %>
+    <div id="wrapper">
+      <!-- Page content -->
+      <div id="page-content-wrapper">
+       <%= render 'layouts/sidebarlogout' %>
+        <div class="hidden-xs">
+          <%= render 'layouts/topbarlogout' %>
+        </div>
+        <div class="visible-xs">
+          <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
+        </div>
+        <!-- Keep all page content within the page-content inset div! -->
+        <div class="page-content inset">
+          <div class="col-md-10 col-sm-12 col-lg-10">
+            <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
+              <% [:notice, :error, :alert].each do |level| %>
+                  <% unless flash[level].blank? %>
+                      <div data-alert="alert" class="alert-message <%= flash_class(level) %> fade in">
+                        <a class="close" href="#">×</a>
+                        <%= content_tag :p, flash[level] %>
+                      </div>
+                  <% end %>
+              <% end %>
+            </div>
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+    </div>
     <script>
         $("#menu-toggle").click(function(e) {
             e.preventDefault();
