--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -97,7 +97,7 @@
                               <%	else  %>
                                   <%= f.hidden_field :photo_file_name, value: result['picture']['data']['url'] %>
                               <% end %>
-                              <%= f.submit result['name'], class: "h6" %>
+                              <%= f.submit result['name'], class: "btn-success" %>
                           <% end %>
                         </div>
                         <div class="col-md-5 col-sm-3 hidden-xs" style="padding: 0 !important; text-align: center">
