--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -23,7 +23,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
+                <li role="presentation" ><%= link_to "Location", places_path, role: "menuitem" %></li>
+
                 <li><%= link_to "Configuration", edit_user_registration_path(current_user) %></li>
+
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Log out",  destroy_user_session_path, method: "delete" %>
