--- a/app/views/layouts/_topbarxs.html.erb
+++ b/app/views/layouts/_topbarxs.html.erb
@@ -1,24 +1,22 @@
-<%	loc = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{current_user.lat},#{current_user.lng}&result_type=neighborhood&key=AIzaSyDskhqd4ok1InUhAkKJj3hqXfNj2ylgdlU").read) %>
-<div class="navbar navbar-fixed-top " role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
+<%	loc = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{current_user.lat},#{current_user.lng}&result_type=locality&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
+<div class="navbar navbar-fixed-top " role="navigation" style=" background-color: #f5f5f5;">
   <a id="menu-toggle" href="#" class="btn btn-default" style="margin-top: 2px; margin-left: 4px"><i class="icon-reorder"></i></a>
-  <div style="text-align: center; margin-top: -20px; margin-right: 40px">  Monterrey</div>
+  <div style="text-align: center; margin-top: -20px; margin-right: 40px">
+    <%	 if loc['results'][0].nil? %>
+
+    <%	 else %>
+        <%= loc['results'][0]['address_components'][0]['short_name']  %>
+    <%	 end %>
+  </div>
   <ul class="nav" style=" margin-top: -20px">
     <ul class="pull-right">
-      <li id="fat-menu" class="dropdown" style="margin-bottom: 2px">
-        <% if current_user.photo_file_name.blank?  %>
-            <% if current_user.avatar.blank?  %>
-                <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"), current_user %>
-            <%	 else %>
-                <%= link_to image_tag("http://graph.facebook.com/#{current_user.uid}/picture?type=square", class: "avatarchiquito"), current_user %>
-            <% end %>
-        <% else %>
-            <%= link_to image_tag(current_user.photo.url(:square), class: "avatarchiquito"), current_user  %>
-        <%	 end %>
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 40px">
-          <b class="caret"></b>
+      <li id="fat-menu" class="dropdown" style="margin-top: -15px">
+        <a href="#" role="button" id="drop3" class="dropdown-toggle" data-toggle="dropdown" >
+          <i class="fa fa-3x fa-cog" ></i>
         </a>
-        <ul class="dropdown-menu" >
-          <li><%= link_to "Profile", current_user %></li>
+        <ul class="dropdown-menu pull-right" role="menu">
+          <li role="presentation" ><%= link_to "Profile", current_user, role: "menuitem" %></li>
+          <li role="presentation" ><%= link_to "Location", places_path, role: "menuitem" %></li>
           <li><%= link_to "Configuration", edit_user_registration_path(current_user) %></li>
           <li class="divider"></li>
           <li>
