--- a/app/views/layouts/_topbarxs.html.erb
+++ b/app/views/layouts/_topbarxs.html.erb
@@ -1,7 +1,7 @@
 <%	loc = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{current_user.lat},#{current_user.lng}&result_type=locality&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
 <div class="navbar navbar-fixed-top " role="navigation" style=" background-color: #f5f5f5;">
   <a id="menu-toggle" href="#" class="btn btn-default" style="margin-top: 2px; margin-left: 4px"><i class="icon-reorder"></i></a>
-  <div style="text-align: center; margin-top: -20px; margin-right: 40px">
+  <div style="text-align: center; margin-top: -20px; ">
     <%	 if loc['results'][0].nil? %>
 
     <%	 else %>
