--- a/app/views/layouts/actividades.html.erb
+++ b/app/views/layouts/actividades.html.erb
@@ -4,7 +4,7 @@
  <%=	 render "layouts/header2" %>
 </head>
 
-<body>
+<body  style="background-color: #808080">
 <%=	 render "layouts/googleanalytics" %>
 <%=	 render "layouts/bodyapp" %>
 
