--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -1,12 +1,20 @@
-
+<%	loc = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{current_user.lat},#{current_user.lng}&result_type=locality&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
 <!-- top navbar -->
 <div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
-    <div class="navbar-header">
-    </div>
   <div>
       <nav class="hidden-xs col-md-offset-3">
+        <div style="text-align: center; margin-top: -20px; ">
+          <%	 if loc['results'][0].nil? %>
+
+          <%	 else %>
+              <%= loc['results'][0]['address_components'][0]['short_name']  %>
+          <%	 end %>
+        </div>
+
         <ul class="nav " style="margin-right: 5%; padding-top: 20px">
+
           <ul class="pull-right">
+
             <li id="fat-menu" class="dropdown">
               <% if current_user.photo_file_name.blank?  %>
                   <% if current_user.avatar.blank?  %>
