--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -4,7 +4,7 @@
   <%=	 render "layouts/header2" %>
 </head>
 
-<body>
+<body  style="background-color: #e9eaed">
 <%=	 render "layouts/googleanalytics" %>
 
 <%=	 render "layouts/bodyapp" %>
