--- a/app/views/eventos/index.html.erb
+++ b/app/views/eventos/index.html.erb
@@ -1,54 +1,79 @@
-<h1>Todos los Eventos</h1>
+<h1>Events</h1>
 
-<% @eventos.limit(20).order("RANDOM()").each do |estado| %>
-    <ul class="thumbnail col-md-4 col-lg-3 col-sm-6 col-xs-12">
 
-      <div style="height: 250px">
-        <% if estado.photo_file_size? %>
-            <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image", height: 250 %>
-        <% else %>
-            <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" height="250px" width="100%" alt="Responsive image">
-        <% end %>
+
+<%	 if signed_in? %>
+    <div class="col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 20px">
+      <div class="row" style="background-color: #593e73; border-radius: 5px; padding: 15px;  margin-top: -10px; ">
+        <div class="col-md-6 col-sm-6 hidden-xs">
+          <h1 style="color: #ffffff">Events </h1>
+        </div>
+        <div class="visible-xs col-xs-6">
+        </div>
       </div>
-      <div class="caption">
-        <h3><%= link_to estado.nombre.first(14), estado %> </h3>
-        <div class="row" style="max-height: 60px; overflow: hidden">
+    </div>
+    <%	fbevents = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=summer&type=event&fields=cover,name,location&center=#{current_user.lat},#{current_user.lng}&distance=50000&access_token=#{current_user.oauth_token}").read) %>
+    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="border: 1px solid #d3d6db; " >
+      <% fbevents['data'].each do |result| %>
 
+          <div class="row" style="margin-bottom: -15px;  margin-top: -10px">
+            <div class="col-md-2 col-sm-2 col-xs-4">
+              <%	 if result['cover'].nil?  %>
+              <%	else  %>
+                  <div class="img-responsive" style="height: 110px; overflow: hidden">
+                    <%=  image_tag(result['cover']['source']) %>
+                  </div>
+              <%	end  %>
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8" style="padding: 0 !important;">
+              <div class="col-md-3 col-sm-6 col-xs-12 hidden-xs" style="padding: 0 !important; text-align: center ">
+                <%= form_for(@evento) do |f| %>
+                    <%= f.hidden_field :name, value: result['name'] %>
+                    <%= f.hidden_field :referencefb, value: result['id'] %>
+                    <%	 if result['cover'].nil?  %>
+                    <%	else  %>
+                        <%= f.hidden_field :photo_file_name, value: result['cover']['source'] %>
+                    <% end %>
+                    <%= f.submit result['name'], class: "btn-success" %>
+                <% end %>
+              </div>
+              <div class="col-md-5 col-sm-3 hidden-xs" style="padding: 0 !important; text-align: center">
+                <h6>Friends attending today</h6>
+              </div>
+              <div class="col-md-4 col-sm-3 hidden-xs" style="padding: 0 !important; text-align: center">
+                <h6>Friends that have been here</h6>
+              </div>
+              <div class="col-xs-12 visible-xs" style="padding:0 !important; margin-top: -10px; ">
+                <div style="margin-top: 10px; margin-bottom: -15px">
+                  <%= form_for(@evento) do |f| %>
+                      <%= f.hidden_field :name, value: result['name'] %>
+                      <%= f.hidden_field :referencefb, value: result['id'] %>
+                      <%	 if result['cover'].nil?  %>
+                      <%	else  %>
+                          <%= f.hidden_field :photo_file_name, value: result['cover']['source'] %>
+                      <% end %>
+                      <%= f.submit result['name'], class: "btn-success" %>
+                  <% end %>
+                </div>
+                <%	 if result['location'].nil?  %>
+                <%	else  %>
+                    <h6 style="font-size: 10px"><%= result['location']%></h6>
+                <% end %>
+                <h6 style="font-size: 10px">Friends attending </h6>
 
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p>
-            <div class="descripcionmicrositios">   <%=  estado.descripcion  %>  </div>
-            </p>
-          </div>
-        </div>
-        <div class="row " style="margin-bottom: 10px; font-weight: bold">
-          <div class="col-md-8 col-md-offset-2">
-            <%=	 link_to "Ver más -->", estado %>
-          </div>
-        </div>
-        <div class="row" style="margin-top: 5px">
-          <div class="col-md-6 col-sm-6 col-xs-6">
-            <div id="follow_form" >
-              <% if current_user.followingestado?(estado) %>
-                  <%= form_for(current_user.relationestados.find_by(followed_id: estado), html: { method: :delete }) do |f| %>
-                      <%= f.submit "Siguiendo", class: "btn " %>
-                  <% end %>
-              <% else %>
-                  <%= form_for(current_user.relationestados.build(followed_id: estado.id)) do |f| %>
-                      <div><%= f.hidden_field :followed_id %></div>
-                      <%= f.submit "Seguir", class: "btn  btn-primary" %>
-                  <% end %>
-              <% end %>
+              </div>
+            </div>
+            <div class="col-md-2 col-sm-2 hidden-xs  ">
+              <h6> Distance</h6>
+
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-6 estadocontador">
-            <%= estado.followers.count%>
-            lo siguen
-          </div>
+          <hr/>
 
-        </div>
-      </div>
-    </ul>
+      <%	 end %>
+
+    </div>
+
+<% else %>
+    <%=	 render "shared/ingresa" %>
 <% end %>
