--- a/app/views/eventos/show.html.erb
+++ b/app/views/eventos/show.html.erb
@@ -1,109 +1,96 @@
-<div class="contenedor">
-  <div id="eventostitulocontendedor">
-    <div id="eventostitulovotos">
-      <div id="formrow">
-        <%= render 'follow_form' if signed_in? %>
+<%	 if signed_in? %>
+    <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@evento.referencefb}?fields=cover,name,location,description,start_time,end_time,parent_group,invited,posts&access_token=#{current_user.oauth_token}").read) %>
+    <div class="col-md-12 col-sm-12 col-xs-12 border" style="margin-bottom: 15px" >
+      <div class="row" style="margin-bottom: 10px; padding-top: 20px" >
+        <div class="col-md-5 col-xs-12">
+          <div class="img-responsive">
+            <%	 if place['cover'].nil?  %>
+            <%	else  %>
+                <div class="img-responsive" style="height: 350px; overflow: hidden">
+                  <%= image_tag(place['cover']['source'])   %>
+                </div>
+            <%	end  %>
+          </div>
+        </div>
+        <div class="col-md-7 col-xs-12">
 
-        <%= form_for(@evento, :html => { :multipart => true }) do |f| %>
+          <h1> <%= place['name']	  %></h1>
 
-            <%= render 'shared/error_messages', object: f.object %>
-
-            <%= f.label :votos %>
-            <%= check_box_tag 'Vota', 1 %>
-
-        <% end %>
+          <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['were_here_count']  %>   persons where here.</p> </h5>
+          <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['talking_about_count']  %>   are talking about this place.</p> </h5>
+          <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['likes']  %>  likes in Facebook.</p> </h5>
+          <div class="col-md-6" style="padding-top: 40px">
+            <%= render 'follow_form' if signed_in? %>
+          </div>
+        </div>
       </div>
-
     </div>
-    <div id="eventostitulo">
-      <h1><%=	@evento.nombre %> </h1>
+    <div class="col-md-12 col-sm-12 col-xs-12 border" style="margin-bottom: 15px">
+      <div class="row">
+        <div class="col-md-8 col-xs-12">
+
+          <h2>Description</h2>
+          <p> <%= place['description']	  %></p>
+        </div>
+        <div class="col-md-4 col-xs-12">
+
+
+              <h2>Hours</h2>
+              <% place['start_time']  %>
+
+        </div>
+      </div>
     </div>
-    <div id="eventostitulocomparteredes">
-      <div class="fb-like" data-href="<%=request.original_url%>" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="box_count" data-action="recommend" data-show-faces="true" data-send="false"></div>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-via="NTLmx" data-lang="es" data-size="large">Twittear</a>
-      <div class="g-plusone" data-annotation="inline" data-width="120"></div>
-
+    <div class="col-md-12 col-sm-12 col-xs-12 border" style="margin-bottom: 15px">
+      <div class="row" style="margin-top: 20px">
+        <div class="col-md-4 col-xs-12">
+          <%	 if place['photos'].nil?  %>
+          <%	else  %>
+              <h2>Recently photos</h2>
+              <% place['photos']['data'].first(4).each do |x|  %>
+                  <ul >
+                    <li>
+                      <div class="img-responsive" style="overflow: hidden">
+                        <%= image_tag(x['source'])  %>
+                      </div>
+                      <%= x['from']['name']  %>
+                    </li>
+                  </ul>
+              <%	end  %>
+          <%	end  %>
+        </div>
+        <div class="col-md-8 col-xs-12">
+          <%	 if place['posts'].nil?  %>
+          <%	else  %>
+              <h2>Posts</h2>
+              <% place['posts']['data'].first(6).each do |x|  %>
+                  <div class="row">
+                    <div class="col-md-4 col-xs-4">
+                      <div class="img-responsive" style="overflow: hidden; height: 100px">
+                        <%= image_tag(x['picture'])  %>
+                      </div>
+                    </div>
+                    <div class="col-md-8 col-xs-8">
+                      <%= x['message']  %>
+                    </div>
+                  </div>
+                  <hr/>
+              <% end %>
+          <% end %>
+        </div>
+      </div>
     </div>
-  </div>
-
-
-
-  <div id="eventosfotoprincipalcontenedor">
-
-      <div id="eventosfotoprincipal">
-        <%= image_tag @evento.photo.url(:big) %>
-      </div>
-
-      <div id="eventosdescripcioncontenedorimg">
-        <article>
-              <div id="eventosfecha">
-                <p> Fecha del evento: </p>
-                <%=	@evento.fecha %>
-              </div>
-              <div id="eventosartista">
-                <p> Artistas: </p>
-                <%= 	 @evento.artista %>
-              </div>
-              <div id="eventosprecio">
-                <p>Precio del Evento:</p>
-                <p> $ <%=@evento.precio %> </p>
-              </div>
-              <div id="eventosurloficial">
-                <%=@evento.urloficial %>
-              </div>
-
-        </article>
-      </div>
-  </div>
-
-  <article>
-  <div id="eventosdescripcioncontenedor">
-
-
-      <p> Descripción: </p>
-      <div id="eventosdescripcion">
-      <%=	@evento.descripcion  %>
-      </div>
-
-      <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10"></div>
-
-      <div id="eventosmicrositio">
-        <%= @micrositioevento %>
-      </div>
-
-  </div>
-  </article>
-  <div id="eventosotroseventoscontendeor">
-  <div id="eventosotroseventostitulo">
-    // Otros eventos //
-  </div>
-  <div id="eventosotroseventos">
-      <div>
-        <% @eventos.each do |evento|%>
-          <ul>
-            <div id="eventoimagenesnombre">
-            <h2> <%= link_to evento.nombre, evento.nombre %> </h2>
-            </div>
-            <div id="eventosimagenes">
-            <%=	link_to image_tag evento.photo.url(:small) %>
-            </div>
-            <hr>
-          </ul>
-         <% end %>
-      </div>
-  </div>
-  <div id="eventosmostrartodos" class="centrado">
-    <%=	 link_to "Todos los Eventos", controller:"eventos", action:"index" %>
-  </div>
-</div>
-
-
-
-
-
-  <div id="footereventos">
-    <div id="eventosmostrartodos">
-    <%=	 link_to "Todos los Eventos", controller:"eventos", action:"index" %>
+    <div class="col-md-12 col-sm-12 col-xs-12 border" >
+      <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "280"></div>
     </div>
-  </div>
-</div>
+
+
+<% else %>
+    <%=	 render "shared/ingresa" %>
+<% end %>
+
+
+
+
+
+
