Modificando friends that have been here y agregando columna name a eventos

--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -38,10 +38,10 @@
                           <% end %>
                         </div>
                         <div class="col-md-5 col-sm-3 hidden-xs" style="padding: 0 !important; text-align: center">
-                          <h6>Friends attending today</h6>
+                          <h6>Attending today</h6>
                         </div>
                         <div class="col-md-4 col-sm-3 hidden-xs" style="padding: 0 !important; text-align: center">
-                          <h6>Friends that have been here</h6>
+                          <h6>People that have been here</h6>
                           <p><%= number_with_delimiter(result['checkins']) %></p>
                         </div>
                         <div class="col-xs-12 visible-xs" style="padding:0 !important; margin-top: -10px; ">
