--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -3,18 +3,15 @@
 <div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
   <div>
       <nav class="hidden-xs col-md-offset-3">
-        <div style="text-align: center; margin-top: -20px; ">
+        <div style="text-align: center;  ">
           <%	 if loc['results'][0].nil? %>
 
           <%	 else %>
               <%= loc['results'][0]['address_components'][0]['short_name']  %>
           <%	 end %>
         </div>
-
         <ul class="nav " style="margin-right: 5%; padding-top: 20px">
-
           <ul class="pull-right">
-
             <li id="fat-menu" class="dropdown">
               <% if current_user.photo_file_name.blank?  %>
                   <% if current_user.avatar.blank?  %>
