--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -2,14 +2,15 @@
 <!-- top navbar -->
 <div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
   <div>
-      <nav class="hidden-xs col-md-offset-3">
-        <div style="text-align: center;  ">
+      <nav class="hidden-xs ">
           <%	 if loc['results'][0].nil? %>
 
           <%	 else %>
-              <%= loc['results'][0]['address_components'][0]['short_name']  %>
+            <div class="col-md-offset-5" style="padding-top: 15px; margin-bottom: -45px" >
+
+           <h2> <%= loc['results'][0]['address_components'][0]['short_name']  %> </h2>
+            </div>
           <%	 end %>
-        </div>
         <ul class="nav " style="margin-right: 5%; padding-top: 20px">
           <ul class="pull-right">
             <li id="fat-menu" class="dropdown">
