--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,16 @@
 
 
 <%	friends = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{current_user.uid}/friends?fields=picture.width(60).height(60),name&access_token=#{current_user.oauth_token}").read) %>
-<h1>Users</h1>
+
+<div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 col-sm-10 col-sm-offset-1 col-xs-12" style="border: 1px solid #d3d6db; margin-bottom: 15px" >
+
+<div class="row" >
+  <h1 style="margin-left: 20px">Friends</h1>
+</div>
+</div>
+
 <div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 col-sm-10 col-sm-offset-1 col-xs-12" style="border: 1px solid #d3d6db; " >
+
                     <% friends['data'].each do |x|  %>
                       <div class="row" >
                             <% if  x.nil? %>
