--- a/app/views/micrositios/show.html.erb
+++ b/app/views/micrositios/show.html.erb
@@ -1,6 +1,6 @@
 <%	 if signed_in? %>
     <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@micrositio.referencefb}?fields=picture.width(250),photos,likes,hours,name,posts,location,were_here_count,talking_about_count,description&access_token=#{current_user.oauth_token}").read) %>
-    <div class="col-md-12 col-sm-12 col-xs-12 border" style="margin-bottom: 15px" >
+    <div class="col-md-12 col-sm-12 col-xs-12 border" style="margin: 0px 0px 20px 0px" >
       <div class="row" style="margin-bottom: 10px; padding-top: 20px" >
         <div class="col-md-5 col-xs-12">
           <div class="img-responsive">
@@ -23,6 +23,7 @@
             <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['talking_about_count']  %>   are talking about this place.</p> </h5>
             <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['likes']  %>  likes in Facebook.</p> </h5>
           <div class="col-md-6" style="padding-top: 40px">
+            <%= render 'follow_form' if signed_in? %>
             <%= render 'follow_form' if signed_in? %>
           </div>
         </div>
@@ -50,23 +51,36 @@
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12 border" style="margin-bottom: 15px">
     <div class="row" style="margin-top: 20px">
-            <div class="col-md-4 col-xs-12">
+            <div class="col-md-5 col-xs-12">
                   <%	 if place['photos'].nil?  %>
                   <%	else  %>
                       <h2>Recently photos</h2>
-                      <% place['photos']['data'].first(4).each do |x|  %>
-                          <ul >
-                            <li>
-                          <div class="img-responsive" style="overflow: hidden">
-                            <%= image_tag(x['source'])  %>
-                          </div>
-                              <%= x['from']['name']  %>
-                            </li>
-                          </ul>
-                      <%	end  %>
-                  <%	end  %>
+                      <br/>
+                          <% place['photos']['data'].first(4).each do |x|  %>
+                      <div class="row">
+                              <div class="img-responsive" style="overflow: hidden">
+                                <%	 if x['images'][5].nil?  %>
+                                    <%	 if x['images'][4].nil? %>
+                                       <%	 if x['images'][3].nil? %>
+                                             <%	 if x['images'][2].nil? %>
+                                             <%	 else %>
+                                                <%= image_tag(x['images'][2]['source'])  %>
+                                             <%	 end %>
+                                       <%	 else %>
+                                            <%= image_tag(x['images'][3]['source'])  %>
+                                       <%	 end %>
+                                    <%	 else %>
+                                        <%= image_tag(x['images'][4]['source'])  %>
+                                    <%	 end %>
+                                <%	 else %>
+                                    <%= image_tag(x['images'][5]['source'])  %>
+                                <%	 end %>
+                              </div>
+                      </div>
+                          <%	 end %>
+                  <%	 end %>
             </div>
-            <div class="col-md-8 col-xs-12">
+            <div class="col-md-7 col-xs-12">
               <%	 if place['posts'].nil?  %>
               <%	else  %>
                   <h2>Posts</h2>
