--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -59,19 +59,36 @@
                           <h6 style="font-size: 10px"><%= result['location']['city'] %></h6>
                           <h6 style="font-size: 10px">Friends attending </h6>
                           <h6 style="font-size: 10px">Have been here: <%= number_with_delimiter(result['checkins']) %> </h6>
-                          <%	distance = ActiveSupport::JSON.decode(open("http://maps.googleapis.com/maps/api/distancematrix/json?origins=#{current_user.lat},#{current_user.lng}&destinations=#{result['location']['latitude']},#{result['location']['longitude']}&sensor=false").read) %>
-                          <%	 if distance.nil?  %>
-                          <%	else  %>
-                          <h6 style="font-size: 10px"> Distance  <%= distance['rows'][0]['elements'][0]['distance']['text']  %></h6>
-                          <% end %>
+
+                              <script type="text/javascript">
+
+                                function getDistance(lat1,lon1,lat2,lon2)
+                                {
+                                    var R = 6371; // km
+                                    var φ1 = lat1.toRadians();
+                                    var φ2 = lat2.toRadians();
+                                    var Δφ = (lat2-lat1).toRadians();
+                                    var Δλ = (lon2-lon1).toRadians();
+                                    var a = Math.sin(Δφ/2) * Math.sin(Δφ/2) +
+                                          Math.cos(φ1) * Math.cos(φ2) *
+                                          Math.sin(Δλ/2) * Math.sin(Δλ/2);
+                                    var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+                                    var d = R * c;
+                                    alert(d);
+                                    return d;
+                                }
+
+                              </script>
+
+                          <h2> Distance</h2>
+
+
+
                         </div>
                   </div>
                   <div class="col-md-2 col-sm-2 hidden-xs  ">
                     <h6> Distance</h6>
-                                <%	 if distance.nil?  %>
-                                <%	else  %>
-                                <%= distance['rows'][0]['elements'][0]['distance']['text']  %>
-                        <% end %>
+                    <%=	  javascript_tag "getDistance(#{current_user.lat},#{current_user.lng},#{result['location']['latitude']},#{result['location']['longitude']})" %>
                   </div>
                 </div>
                 <hr/>
